Closed Bug 494681 Opened 15 years ago Closed 15 years ago

nsFilePicker::GetAccessoryView warning: comparison between signed and unsigned integer expressions

Categories

(Core :: Widget: Cocoa, defect)

x86
macOS
defect
Not set
minor

Tracking

()

RESOLVED FIXED
mozilla1.9.2a1

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file, 1 obsolete file)

widget/src/cocoa/nsFilePicker.mm: In member function ‘NSView* nsFilePicker::GetAccessoryView()’:
widget/src/cocoa/nsFilePicker.mm:193: warning: comparison between signed and unsigned integer expressions
Attached patch patch (obsolete) — Splinter Review
Attachment #379443 - Flags: superreview?(roc)
Attachment #379443 - Flags: review?(mark)
Comment on attachment 379443 [details] [diff] [review]
patch

Looks like you attached the patch from Bug 493781 ;-)
Attached patch patchSplinter Review
Attachment #379443 - Attachment is obsolete: true
Attachment #379468 - Flags: superreview?(roc)
Attachment #379468 - Flags: review?(mark)
Attachment #379443 - Flags: superreview?(roc)
Attachment #379443 - Flags: review?(mark)
Attachment #379468 - Flags: superreview?(roc)
Attachment #379468 - Flags: superreview+
Attachment #379468 - Flags: review?(mark)
Attachment #379468 - Flags: review+
http://hg.mozilla.org/mozilla-central/rev/6b5770a8faea
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2a1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: