Bug 494681 nsFilePicker::GetAccessoryView warning: comparison between signed and unsigned integer expressions r+sr=roc